change text on intro

--- a/index.html
+++ b/index.html
@@ -131,9 +131,13 @@
                         </h2>
                     </div>
                     <h1 style="color:#000;">Introducing LIFTiD Neurostimulation </h1>
-                    <h3 style="color:#000;">A new hi-tech consumer product, powered by<strong style="color:#3fcaff;"> Transcranial Direct Current Stimulation (tDCS)</strong>, that will dramatically change the way we live.</h3>
+                    <h4 style="color:#000;">A new hi-tech consumer product, powered by<strong style="color:#3fcaff;"> Transcranial Direct Current Stimulation (tDCS)</strong>, that will dramatically change the way we live.
 
-                    <p style="color:#000;">Using <strong>LIFTiD Neurostimulation</strong> for 20 minutes a day trains the brain to maximize attention, focus and alertness, thus putting the LIFTiD user in the right mindset to accomplish tasks and perform at a higher level. Studies show that tDCS alters brain function by increasing blood flow, enhancing neurotransmittor release and activating neurons. <br><br>For healthy individuals, tDCS is a safe and effective method to mildly stimulate the brain as an alternative to chemical stimulants such as caffeine, sugar, and performance enhancers. LIFTiD is lightweight, fashionable, easy to use, developed by a world renowned science team, and the perfect device for elevating performance.</p>
+                    <br><br>Transcranial Direct Current Stimulation (tDCS) is an increasingly popular form of neurostimulation that applies a low level electric current through two electrodes to targeted areas of the brain as an alternative to chemical stimulants such as caffeine, sugar, and other performance enhancers. For healthy individuals (18 years of age and older), tDCS is a safe and effective method to mildly stimulate the brain.
+
+                    <br><br>Using <strong>LIFTiD Neurostimulation</strong> for 20 minutes a day trains the brain to maximize attention, focus and alertness, thus putting the LIFTiD user in the right mindset to accomplish tasks and perform at a higher level. Studies show that tDCS alters brain function by increasing blood flow, enhancing neurotransmittor release and activating neurons.
+
+                    <br><br>LIFTiD is lightweight, fashionable, easy to use, developed by a world renowned science team and the perfect device for elevating performance.</h4>
                 </div>
                 <div class="col-md-6">
                     <div class="about_us_image_box justify-content-center">
