change replace text

--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
 		          <div class="block-3 d-md-flex ftco-animate ">
 		            <a href="portfolio.html" class="image" style="background-image: url('img/liftid-video-games.jpg'); "></a>
 		            <div class="text">
-							<h1 style="color: #3fcaff;"><strong>Replace </strong><strong class="typewrite" data-period="4000" data-type='[ "chemical stimulants.", "caffeine. ", "sugar." ]'>
+							<h1 style="color: #3fcaff;"><strong>Less </strong><strong class="typewrite" data-period="4000" data-type='[ "chemical stimulants.", "caffeine. ", "sugar.", "sweet snacks."]' >
 			                  <span class="wrap"></span>
 			                </strong></h1>
 							<br>
 							<div class="chem-icons"><i class="fas fa-5x fa-pills fa-fw"></i><i class="fas fa-5x fa-prescription-bottle fa-fw"></i><i class="fas fa-5x fa-coffee fa-fw"></i></i> </div>
 							<br><br><h4>For healthy individuals, tDCS is a safe and effective method to mildly stimulate the brain as an alternative to chemical stimulants such as caffeine, sugar, and performance enhancers. 
-							<br><br>The tDCS experience is unique, painless, and safe. The most common side-effects are all temporary, including a slight itching, tingling, heated sensation on the scalp and a mild headache.</h4>
+							<br><br>They say less equals more. By using <strong>LIFTiD Neurostimulation</strong> once a day for 20 minutes, if you can consume LESS caffeine (that extra cup of coffee you don’t need), LESS sugary drinks (that energy drink loaded with caffeine & sugar you don’t need), LESS sweet snacks (that candy bar or brownie you don’t need), and LESS performance enhancers (non-prescribed study aids you don’t need), then you can focus on MORE…PRODUCTIVITY AND ELEVATING PERFORMANCE.</h4>
 							<br><a class="primary_btn" href="about-tdcs.html">Learn more</a>
 							
 						</div>
@@ -252,9 +252,10 @@
 		            <a href="portfolio.html" class="image order-2" style="background-image: url('img/kevin-guitar.jpg'); "></a>
 		            <div class="text order-1">
 		              <h1 style="color: #3fcaff;"><strong>The tDCS experience</strong></h1>
-                            <br>
-                           <h4>Liftid is a sophisticated and safe tDCS device supported by over 4,000 published studies, and designed & backed by a world renowned neuroscience team.  LIFTiD Neurostimulation is for recreational use only. 
-                            <br><br>Transcranial Direct Current Stimulation (also known as tDCS) is an increasingly popular form of neurostimulation that applies a mild electric current through two electrodes to targeted areas of the brain as an alternative to chemical stimulants such as caffeine, sugar, and other performance enhancers. Liftid neurostimulation specifically targets the prefrontal cortex area of the brain, an area associated with cognitive performance, including attention, focus, alertness, and productivity. </h4>
+                           <br>
+                            <h4>LIFTiD is a sophisticated and safe tDCS device supported by over 4,000 published studies, and designed & backed by a world renowned neuroscience team.  LIFTiD Neurostimulation is for recreational use only. 
+                            <br><br>Transcranial Direct Current Stimulation (also known as tDCS) is an increasingly popular form of neurostimulation that applies a mild electric current through two electrodes to targeted areas of the brain as an alternative to chemical stimulants such as caffeine, sugar, and other performance enhancers. Liftid neurostimulation specifically targets the prefrontal cortex area of the brain, an area associated with cognitive performance, including attention, focus, alertness, and productivity.
+                            <br><br>The tDCS experience is unique, painless, and safe. The most common side-effects are all temporary, including a slight itching, tingling, heated sensation on the scalp and a mild headache. </h4>
                             <br><a class="primary_btn" href="about-tdcs.html">Learn more</a>
 		            </div>
 		          </div>
