--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 							<li class="nav-item"><a class="nav-link" href="#">Team</a>
 							<li class="nav-item"><a class="nav-link" href="#">Support</a>
 							<li class="nav-item"><a class="nav-link" href="buy.html">Buy</a>
-							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="#" class="primary_btn">buy now</a></li>
@@ -399,8 +398,8 @@
 						</div>
 						<ul>
 							<li><a href="#"></a>Team</a></li><a href="#">
-							<li><a href="#"></a>Contact</a></li>
-							<li><a href="#"></a>Buy</a></li>
+							<li><a href="contact.html"></a>Contact</a></li>
+							<li><a href="buy.html"></a>Buy</a></li>
 						</ul>
 					</aside>
 				</div>
