take out references and make it its own page

--- a/references.html
+++ b/references.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="img/favicon.png" type="image/png">
-        <title>About LIFTiD</title>
+        <title>References</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
     </head>
-    <body class="about_page">
+    <body class="upcoming_games">
 
 		<!--================Header Menu Area =================-->
 		<header class="header_area">
@@ -60,6 +60,7 @@
 	</header>
 		<!--================Header Menu Area =================-->
 	
+		
 		<!--================Home Banner Area =================-->
 		<section class="banner_area">
 			<div class="banner_inner d-flex align-items-center">
@@ -68,158 +69,141 @@
 					<div class="banner_content text-center">
 						<div class="page_link">
 							<a href="index.html">Home</a>
-							<a href="about-us.html">About LIFTiD</a>
+							<a href="about-tdcs.html">References</a>
 						</div>
-						<h2>About LIFTiD</h2>
+						<h2>References</h2>
 					</div>
 				</div>
 			</div>
 		</section>
 		<!--================End Home Banner Area =================-->
 	
-		<!--================Start About Us Area =================-->
-		<section style="background:#000;">
-			<div class="container">
-				<div class="row about_content align-items-center">
-					<div class="col-lg-6">
-						<div class="section_content">
-							<h6>About Us</h6>
-							<h1>LIFTiD Neurostimulation uses tDCS technology and is for recreational use only.</h1>
-							<p>LIFTiD Neurostimulation was developed and designed to put all users in the mindset to boost their brain’s potential through mild electrical stimulation, thereby, over time, providing a brain training routine to improve focus, productivity, and memory.</p>
-							<a class="primary_btn" href="using-liftid">Learn More</a>
-						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="about_us_image_box justify-content-center">
-							<img class="img-fluid w-100" src="img/LIFTiD-Headshot.png" alt="">
-							
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!--================End About Us Area =================-->
-			<section class="intro_area">
-				<div class="container">
-					<div class="section-top-border">
-						<div class="row">
-							<div class="col-md-12">
-								<div class="row">
-									<div class="col-md-5 mt-sm-20 left-align-p">
-										<br>
-										<h4>Everyone is unique. Doing a task during your LIFTiD neurostimulation session is important for the best effects and best outcome. Try to concentrate on the task at hand, whether it be writing a paper or studying for an exam, preparing for a big presentation, getting ready for an eSports competition, or preparing to jam with your band. Keep busy. The more you concentrate on the task, the more you forget about the stimulation.</h4><br>
-										<h4> LIFTiD Neurostimulation is programmed to deliver a constant, low level direct current, to the dorsolateral prefrontal cortex region of the brain, throughout every stimulation session.</h4><br>
-										<h4><b>Use LIFTiD Neurostimulation once a day, for 20 minutes</b>, and realize your potential within, “without” putting chemical stimulants into your body.</h4>
-									</div>
-									<div class="col-md-7">
-										<img src="img/LIFTiD-Device-2.png" alt="" class="img-fluid">
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-		
-		<!-- Start faq Area -->
-			<section class="faq-area section_gap" id="faq">
+		<section class="service-area section_gap_top" id="service">
 				<div class="container">
 					<div class="row">
-					<div class="col-lg-12">
-						<div class="main_title">
-							<h1>Frequently Asked Questions</h1>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-service">
+								<h4>Immediate neurophysiological effects of transcranial electrical stimulation</h4>
+								<p>
+									Anli Liu, Mihály Vöröslakos, Greg Kronberg, Simon Henin, Matthew R. Krause , Yu Huang, Alexander Opitz, Ashesh Mehta, Christopher C. Pack, Bart Krekelberg, Antal Berényi, Lucas C. Parra,Lucia Melloni, Orrin Devinsky & György Buzsáki
+									<br><br>NATURE COMMUNICATIONS | (2018) 9:5092 | DOI: 10.1038/s41467-018-07233-7
+								</p>
+							</div>
 						</div>
-					</div>
-				</div>				
-					<div class="row justify-content-start">
-						<div class="col-lg-6 faq-left">
-							<div id="accordion">
-							  <div class="card">
-							    <div class="card-header" id="headingOne">
-							      <h5 class="mb-0">
-							        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-							          Is LIFTiD safe?
-							        </button>
-							      </h5>
-							    </div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-service">
+								<h4>Studying and modifying brain function with non-invasive brain stimulation</h4>
+								<p>
+									Rafael Polanía, Michael A. Nitsche and Christian C. Ruff
+									<br><br>Nature Neuroscience | VOL 21 | FEBRUARY 174 2018 | 174–187
+								</p>								
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-service">
+								<h4>Calcium imaging reveals glial involvement in transcranial direct current stimulation-induced plasticity in mouse brain</h4>
+								<p>
+									Hiromu Monai, Masamichi Ohkura, Mika Tanaka, Yuki Oe, Ayumu Konno, Hirokazu Hirai,
+									Katsuhiko Mikoshiba, Shigeyoshi Itohara, Junichi Nakai, Youichi Iwai & Hajime Hirase
+									<br><br>NATURE COMMUNICATIONS | 7:11100 | DOI: 10.1038/ncomms11100
+								</p>								
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-service">
+								<h4>Pharmacological modulation of cortical excitability shifts induced by transcranial direct current stimulation in humans</h4>
+								<p>
+									M. A. Nitsche, K. Fricke, U. Henschke, A. Schlitterlau, D. Liebetanz, N. Lang, S. Henning, F. Tergau and W. Paulus
+									<br><br>J Physiol (2003), 533.1, pp. 293–301
+								</p>				
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-service">
+								<h4>Anodal Transcranial Direct Current Stimulation of the Prefrontal Cortex Enhances Complex Verbal Associative Thought</h4>
+								<p>
+									Carlo Cerruti and Gottfried Schlaug
+									<br><br>J Cogn Neurosci. 2009 October ; 21(10): 1980–1987. doi:10.1162/jocn.2008.21143.
+								</p>								
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-service">
+								<h4>Transcranial direct current stimulation versus caffeine as a fatigue countermeasure</h4>
+								<p>
+									Lindsey K. McIntire, R. Andy McKinley, Justin M. Nelson, Chuck Goodyear
+									<br><br>Brain Stimulation 10 (2017) 1070-1078
+								</p>									
+							</div>
+						</div>
 
-							    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-							      <div class="card-body">
-										For healthy individuals, Transcranial Direct Current Stimulation (tDCS) is a safe and effective method to mildly stimulate the brain as an alternative to chemical stimulants such as caffeine, sugar, and performance enhancers.<br><br>
-										tDCS is supported by over 4,000 published studies (including reviews and clinical trials) and is one of the hottest categories in the neuroscience field today. tDCS is helping people all over the world realize their very best brain potential.
-							      </div>
-							    </div>
-							  </div>
-							  <div class="card">
-							    <div class="card-header" id="headingTwo">
-							      <h5 class="mb-0">
-							        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-							          Who can use LIFTiD?
-							        </button>
-							      </h5>
-							    </div>
-							    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-							      <div class="card-body">
-										The “LIFTiD Neurostimulation” device should only be used by healthy adults (18 years of age and older). It should NOT be used:<br>
-										- By children<br>
-										- If you have any electronic implanted medical device, a metal plate in the brain or head, a pacemaker, or a defibrillator.<br>
-										- If you have epilepsy, seizures, brain lesions, or severe heart disease.<br>
-										- If you are pregnant.<br>
-										- If you have sensitive skin or a rash, broken skin, or open wounds such as sores, cuts, or pimples.<br>
-										- If you have a neurological condition or disease.
-							      </div>
-							    </div>
-							  </div>
-							  <div class="card">
-							    <div class="card-header" id="headingThree">
-							      <h5 class="mb-0">
-							        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-							          What Does Neurostimulation Feel Like?
-							        </button>
-							      </h5>
-							    </div>
-							    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-							      <div class="card-body">
-										Everyone is different, everyone has different skin, and everyone feels stimulation differently. That is what makes tDCS and neurostimulation so unique and so different. You may feel warmth, heat, a prickly feeling, a tingling sensation, and a little itchy. These feelings on the skin diminish over time and you get very used to this mild form of stimulation, and often, can forget that you are in a stimulation session.
-							      </div>
-							    </div>
-							  </div>
-							  <div class="card">
-							    <div class="card-header" id="headingThree">
-							      <h5 class="mb-0">
-							        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
-							          What is tDCS?
-							        </button>
-							      </h5>
-							    </div>
-							    <div id="collapseFour" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-							      <div class="card-body">
-										<p>Transcranial Direct Current Stimulation (also known as tDCS) is an increasingly popular form of neurostimulation that applies a low level electric current through two electrodes to targeted areas of the brain as an alternative to chemical stimulants such as caffeine, sugar, and other performance enhancers. tDCS is supported by over 4,000 published studies (including reviews and clinical trials) and is one of the hottest categories in the neuroscience field today. tDCS is helping people all over the world realize their very best brain potential.</p>
-							      </div>
-							    </div>
-							  </div>
-							  <div class="card">
-							    <div class="card-header" id="headingFour">
-							      <h5 class="mb-0">
-							        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFour">
-							          How often should I use LIFTiD?
-							        </button>
-							      </h5>
-							    </div>
-							    <div id="collapseFive" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
-							      <div class="card-body">
-										<p>The “LIFTiD Neurostimulation” device should be used only ONCE A DAY for 20 minutes. Do NOT use more than once a day.</p>
-							      </div>
-							    </div>
-							  </div>									  
-							</div>							
-						</div>	
+
+						<div class="col-lg-4 col-md-6">
+							<div class="single-service">
+								<h4>Effects of Transcranial Direct Current Stimulation (tDCS) on Multitasking Throughput Capacity</h4>
+								<p>
+									Nelson J, McKinley RA, Phillips C, McIntire L, Goodyear C, Kreiner A and Monforton L Front. 
+									<br><br>Hum. Neurosci. 10:589, 2016. doi: 10.3389/fnhum.2016.00589
+								</p>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-service">
+								<h4>Anodal Transcranial Direct Current Stimulation of the Prefrontal Cortex Enhances Complex Verbal Associative Thought</h4>
+								<p>
+									Carlo Cerruti and Gottfried Schlaug
+									<br><br>J Cogn Neurosci. 2009 October ; 21(10): 1980–1987. doi:10.1162/jocn.2008.21143.
+								</p>								
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-service">
+								<h4>Transcranial Direct Current Stimulation Facilitates Associative Learning and Alters Functional Connectivity in the Primate Brain</h4>
+								<p> Matthew R. Krause, Theodoros P. Zanos, Bennett A. Csorba, Praveen K. Pilly, Jaehoon Choe, Matthew E. Phillips, Abhishek Datta, and Christopher C. Pack
+								<br><br>Current Biology 27, 3086–3096, October 23, 2017
+								</p>								
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-service">
+								<h4>Frontal Transcranial Direct Current Stimulation Induces Dopamine Release in the Ventral Striatum in Human</h4>
+								<p>
+									Clara Fonteneau, Jérome Redoute, Frédéric Haesebaert, Didier Le Bars, Nicolas Costes4, Marie-Françoise Suaud-Chagny and Jérome Brunelin
+									<br><br>Cerebral Cortex, July 2018;28: 2636–2646
+								</p>				
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-service">
+								<h4>A Systematic Review and Meta-Analysis of the Effects of Transcranial Direct Current Stimulation (tDCS) Over the Dorsolateral Prefrontal Cortex in Healthy and Neuropsychiatric Samples: Influence of Stimulation Parameters</h4>
+								<p>
+									Josefien Dedoncker, Andre R. Brunoni, Chris Baeken, Marie-Anne Vanderhasselt
+									<br><br>Brain Stimulation 9 (2016) 501–517
+								</p>								
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-6">
+							<div class="single-service">
+								<h4>Transcranial direct current stimulation for memory enhancement: from clinical research to animal models</h4>
+								<p>
+									Djamila Bennabi, Solène Pedron, Emmanuel Haffen, Julie Monnin, Yvan Peterschmitt and Vincent Van Waes 
+									<br><br>Frontiers in Systems Neuroscience www.frontiersin.org September 2014 | Volume 8 | Article 159 
+								</p>									
+							</div>
+						</div>
+						<div class="col-lg-12 col-md-6">
+							<div class="single-service">
+								<h4>Safety of Transcranial Direct Current Stimulation: Evidence Based Update 2016</h4>
+								<p>
+									Marom Bikson, Pnina Grossman, Chris Thomas, Adantchede Louis Zannou, Jimmy Jiang, Tatheer Adnan, Antonios P. Mourdoukoutas, Greg Kronberg, Dennis Truong, Paulo Boggio, Andre R. Brunoni, Leigh Charvet, Felipe Fregni, Brita Fritsch, Bernadette Gillick, Roy H. Hamilton, Benjamin M. Hampstead, Ryan Jankord, Adam Kirton, Helena Knotkova, David Liebetanz, Anli Liu, Colleen Loo, Michael A. Nitsche, Janine Reis, Jessica D. Richardson, Alexander Rotenberg, Peter E. Turkeltaub, Adam J.Woods
+									<br><br>Brain Stimulation 9 (2016) 641–661
+								</p>									
+							</div>
+						</div>												
 					</div>
 				</div>	
 			</section>
-			<!-- End faq Area -->		
-	
+
 		<!--================ Start Newsletter Area ================-->
 		<section class="newsletter_area">
 			<div class="container">
@@ -260,7 +244,7 @@
 						</div>
 						<ul>
 							<li><a href="about-tdcs.html"></a>About tDCS</a></li><a href="#">
-								<li><a href="about-us.html"></a>About LIFTiD</a></li>
+							<li><a href="about-us.html"></a>About LIFTiD</a></li>
 							<li><a href="#"></a>Using LIFTiD</a></li>
 						</ul>
 					</aside>
