--- a/about-tdcs.html
+++ b/about-tdcs.html
@@ -49,7 +49,6 @@
 							<li class="nav-item"><a class="nav-link" href="#">Team</a>
 							<li class="nav-item"><a class="nav-link" href="#">Support</a>
 							<li class="nav-item"><a class="nav-link" href="buy.html">Buy</a>
-							<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 						</ul>
 						<ul class="nav navbar-nav navbar-right">
 							<li class="nav-item"><a href="#" class="primary_btn">buy now</a></li>
@@ -193,6 +192,9 @@
 							      </div>
 							    </div>
 							  </div>
+							  <div class="text-center">
+							  	<br><a style="background: #000; color:#3fcaff;" class="primary_btn" href="references.html">References</a>
+							  </div>
 							</div>							
 						</div>	
 					</div>
@@ -203,141 +205,6 @@
 		</section>
 		<!--================ End Frequently Asked Questions Area ================-->
 	
-
-
-		<section class="service-area" id="service">
-				<div class="container">
-					<div class="row d-flex justify-content-center">
-						<div class="col-md-8 pb-40 ">
-							<div class="main_title">
-								<h2>Backed by Science.</h2>
-								<h1>Backed by Science.</h1>
-							</div>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4>Immediate neurophysiological effects of transcranial electrical stimulation</h4>
-								<p>
-									Anli Liu, Mihály Vöröslakos, Greg Kronberg, Simon Henin, Matthew R. Krause , Yu Huang, Alexander Opitz, Ashesh Mehta, Christopher C. Pack, Bart Krekelberg, Antal Berényi, Lucas C. Parra,Lucia Melloni, Orrin Devinsky & György Buzsáki
-									<br><br>NATURE COMMUNICATIONS | (2018) 9:5092 | DOI: 10.1038/s41467-018-07233-7
-								</p>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4>Studying and modifying brain function with non-invasive brain stimulation</h4>
-								<p>
-									Rafael Polanía, Michael A. Nitsche and Christian C. Ruff
-									<br><br>Nature Neuroscience | VOL 21 | FEBRUARY 174 2018 | 174–187
-								</p>								
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4>Calcium imaging reveals glial involvement in transcranial direct current stimulation-induced plasticity in mouse brain</h4>
-								<p>
-									Hiromu Monai, Masamichi Ohkura, Mika Tanaka, Yuki Oe, Ayumu Konno, Hirokazu Hirai,
-									Katsuhiko Mikoshiba, Shigeyoshi Itohara, Junichi Nakai, Youichi Iwai & Hajime Hirase
-									<br><br>NATURE COMMUNICATIONS | 7:11100 | DOI: 10.1038/ncomms11100
-								</p>								
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4>Pharmacological modulation of cortical excitability shifts induced by transcranial direct current stimulation in humans</h4>
-								<p>
-									M. A. Nitsche, K. Fricke, U. Henschke, A. Schlitterlau, D. Liebetanz, N. Lang, S. Henning, F. Tergau and W. Paulus
-									<br><br>J Physiol (2003), 533.1, pp. 293–301
-								</p>				
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4>Anodal Transcranial Direct Current Stimulation of the Prefrontal Cortex Enhances Complex Verbal Associative Thought</h4>
-								<p>
-									Carlo Cerruti and Gottfried Schlaug
-									<br><br>J Cogn Neurosci. 2009 October ; 21(10): 1980–1987. doi:10.1162/jocn.2008.21143.
-								</p>								
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4>Transcranial direct current stimulation versus caffeine as a fatigue countermeasure</h4>
-								<p>
-									Lindsey K. McIntire, R. Andy McKinley, Justin M. Nelson, Chuck Goodyear
-									<br><br>Brain Stimulation 10 (2017) 1070-1078
-								</p>									
-							</div>
-						</div>
-
-
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4>Effects of Transcranial Direct Current Stimulation (tDCS) on Multitasking Throughput Capacity</h4>
-								<p>
-									Nelson J, McKinley RA, Phillips C, McIntire L, Goodyear C, Kreiner A and Monforton L Front. 
-									<br><br>Hum. Neurosci. 10:589, 2016. doi: 10.3389/fnhum.2016.00589
-								</p>
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4>Anodal Transcranial Direct Current Stimulation of the Prefrontal Cortex Enhances Complex Verbal Associative Thought</h4>
-								<p>
-									Carlo Cerruti and Gottfried Schlaug
-									<br><br>J Cogn Neurosci. 2009 October ; 21(10): 1980–1987. doi:10.1162/jocn.2008.21143.
-								</p>								
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4>Transcranial Direct Current Stimulation Facilitates Associative Learning and Alters Functional Connectivity in the Primate Brain</h4>
-								<p> Matthew R. Krause, Theodoros P. Zanos, Bennett A. Csorba, Praveen K. Pilly, Jaehoon Choe, Matthew E. Phillips, Abhishek Datta, and Christopher C. Pack
-								<br><br>Current Biology 27, 3086–3096, October 23, 2017
-								</p>								
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4>Frontal Transcranial Direct Current Stimulation Induces Dopamine Release in the Ventral Striatum in Human</h4>
-								<p>
-									Clara Fonteneau, Jérome Redoute, Frédéric Haesebaert, Didier Le Bars, Nicolas Costes4, Marie-Françoise Suaud-Chagny and Jérome Brunelin
-									<br><br>Cerebral Cortex, July 2018;28: 2636–2646
-								</p>				
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4>A Systematic Review and Meta-Analysis of the Effects of Transcranial Direct Current Stimulation (tDCS) Over the Dorsolateral Prefrontal Cortex in Healthy and Neuropsychiatric Samples: Influence of Stimulation Parameters</h4>
-								<p>
-									Josefien Dedoncker, Andre R. Brunoni, Chris Baeken, Marie-Anne Vanderhasselt
-									<br><br>Brain Stimulation 9 (2016) 501–517
-								</p>								
-							</div>
-						</div>
-						<div class="col-lg-4 col-md-6">
-							<div class="single-service">
-								<h4>Transcranial direct current stimulation for memory enhancement: from clinical research to animal models</h4>
-								<p>
-									Djamila Bennabi, Solène Pedron, Emmanuel Haffen, Julie Monnin, Yvan Peterschmitt and Vincent Van Waes 
-									<br><br>Frontiers in Systems Neuroscience www.frontiersin.org September 2014 | Volume 8 | Article 159 
-								</p>									
-							</div>
-						</div>
-						<div class="col-lg-12 col-md-6">
-							<div class="single-service">
-								<h4>Safety of Transcranial Direct Current Stimulation: Evidence Based Update 2016</h4>
-								<p>
-									Marom Bikson, Pnina Grossman, Chris Thomas, Adantchede Louis Zannou, Jimmy Jiang, Tatheer Adnan, Antonios P. Mourdoukoutas, Greg Kronberg, Dennis Truong, Paulo Boggio, Andre R. Brunoni, Leigh Charvet, Felipe Fregni, Brita Fritsch, Bernadette Gillick, Roy H. Hamilton, Benjamin M. Hampstead, Ryan Jankord, Adam Kirton, Helena Knotkova, David Liebetanz, Anli Liu, Colleen Loo, Michael A. Nitsche, Janine Reis, Jessica D. Richardson, Alexander Rotenberg, Peter E. Turkeltaub, Adam J.Woods
-									<br><br>Brain Stimulation 9 (2016) 641–661
-								</p>									
-							</div>
-						</div>												
-					</div>
-				</div>	
-			</section>
 
 		<!--================ Start Newsletter Area ================-->
 		<section class="newsletter_area">
