--- a/about-tdcs.html
+++ b/about-tdcs.html
@@ -109,8 +109,7 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="main_title">
-							<h2>Frequently Asked Questions</h2>
-							<h1>Frequently Asked Questions</h1>
+							<h1>Q/A With Dr. Schwartz</h1>
 						</div>
 					</div>
 				</div>
