change about tdcs page and small text changes

--- a/about-tdcs.html
+++ b/about-tdcs.html
@@ -60,56 +60,14 @@
 	</header>
 		<!--================Header Menu Area =================-->
 	
-		
-		<!--================Home Banner Area =================-->
-		<section class="banner_area">
-			<div class="banner_inner d-flex align-items-center">
-				<div class="overlay bg-parallax" data-stellar-ratio="0.9" data-stellar-vertical-offset="0" data-background=""></div>
-				<div class="container">
-					<div class="banner_content text-center">
-						<div class="page_link">
-							<a href="index.html">Home</a>
-							<a href="about-tdcs.html">About tDCS</a>
-						</div>
-						<h2>About tDCS</h2>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!--================End Home Banner Area =================-->
-	
-		<!--================Start About Us Area =================-->
-	<section style="background:#000;" class="about_us_area">
-		<div class="container">
-			<div class="row about_content align-items-center">
-				<div class="col-lg-6">
-					<div class="section_content">
-						<h6>About Us</h6>
-						<h1>Intro to tDCS</h1>
-						<p>Transcranial Direct Current Stimulation (also known as tDCS) is an increasingly popular form of neurostimulation that applies a low level electric current through two electrodes to targeted areas of the brain as an alternative to chemical stimulants such as caffeine, sugar, and other performance enhancers. tDCS is supported by over 4,000 published studies (including reviews and clinical trials) and is one of the hottest categories in the neuroscience field today. tDCS is helping people all over the world realize their very best brain potential.</p>
-						<a class="primary_btn" href="about-us.html">Learn More</a>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="about_us_image_box justify-content-center">
-						<img class="img-fluid w-100" src="img/LIFTiD-people.png" alt="">
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!--================End About Us Area =================-->
-
-	
-		
 	
 		<!--================ Start Frequently Asked Questions Area ================-->
-		<section class="frequently_area">
+		<section style="margin-top:5em;" class="frequently_area">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
 						<div class="main_title">
-							<h1>Q/A With Dr. Schwartz</h1>
+							<h1>Q/A with Dr. Schwartz</h1>
 						</div>
 					</div>
 				</div>
